--- a/common/hello.css
+++ b/common/hello.css
@@ -8,3 +8,14 @@
 .zzjz-bg-blue{
 	background:#007AFF; color:#FFF;
 }
+/* flex元素等级:3级 */
+.zzjz-flex-grow-1 {
+	flex-grow: 1;
+}
+.zzjz-flex-grow-2 {
+	flex-grow: 2;
+}
+.zzjz-flex-grow-3 {
+	flex-grow: 3;
+}
+	
