--- a/common/zzjz.css
+++ b/common/zzjz.css
@@ -1,13 +1,3 @@
-/* 背景色 */
-.zzjz-bg-red{
-	background:#F76260; color:#FFF;
-}
-.zzjz-bg-green{
-	background:#09BB07; color:#FFF;
-}
-.zzjz-bg-blue{
-	background:#007AFF; color:#FFF;
-}
 /* flex元素等级:3级 */
 .zzjz-flex-grow-1 {
 	flex-grow: 1;
@@ -18,4 +8,182 @@
 .zzjz-flex-grow-3 {
 	flex-grow: 3;
 }
-	
+/* 背景色 */
+/* title: '嫣红',
+name: 'red',
+color: '#e54d42' */
+.zzjz-bg-red {
+	background-color: #e54d42;
+	color: #ffffff;
+}
+.zzjz-bg-red.light {
+	color: #e54d42;
+	background-color: #fadbd9;
+}
+/* title: '桔橙',
+name: 'orange',
+color: '#f37b1d' */
+.zzjz-bg-orange {
+	background-color: #f37b1d;
+	color: #ffffff;
+}
+.zzjz-bg-orange.light {
+	color: #f37b1d;
+	background-color: #fde6d2;
+}
+/* title: '明黄',
+name: 'yellow',
+color: '#fbbd08' */
+.zzjz-bg-yellow {
+	background-color: #fbbd08;
+	color: #333333;
+}
+.zzjz-bg-yellow.light {
+	color: #fbbd08;
+	background-color: #fef2ced2;
+}
+/* title: '橄榄',
+name: 'olive',
+color: '#8dc63f' */
+.zzjz-bg-olive {
+	background-color: #8dc63f;
+	color: #ffffff;
+}
+.zzjz-bg-olive.light {
+	color: #8dc63f;
+	background-color: #e8f4d9;
+}
+/* title: '森绿',
+name: 'green',
+color: '#39b54a' */
+.zzjz-bg-green {
+	background-color: #39b54a;
+	color: #ffffff;
+}
+.zzjz-bg-green.light {
+	color: #39b54a;
+	background-color: #d7f0dbff;
+}
+/* title: '天青',
+name: 'cyan',
+color: '#1cbbb4' */
+.zzjz-bg-cyan {
+	background-color: #1cbbb4;
+	color: #ffffff;
+}
+.zzjz-bg-cyan.light {
+	color: #1cbbb4;
+	background-color: #d2f1f0;
+}
+/* title: '海蓝',
+name: 'blue',
+color: '#0081ff' */
+.zzjz-bg-blue {
+	background-color: #0081ff;
+	color: #ffffff;
+}
+.zzjz-bg-blue.light {
+	color: #0081ff;
+	background-color: #cce6ff;
+}
+/* title: '姹紫',
+name: 'purple',
+color: '#6739b6' */
+.zzjz-bg-purple {
+	background-color: #6739b6;
+	color: #ffffff;
+}
+.zzjz-bg-purple.light {
+	color: #6739b6;
+	background-color: #e1d7f0;
+}
+/* title: '木槿',
+name: 'mauve',
+color: '#9c26b0' */
+.zzjz-bg-mauve {
+	background-color: #9c26b0;
+	color: #ffffff;
+}
+.zzjz-bg-mauve.light {
+	color: #9c26b0;
+	background-color: #ebd4ef;
+}
+/* title: '桃粉',
+name: 'pink',
+color: '#e03997' */
+.zzjz-bg-pink {
+	background-color: #e03997;
+	color: #ffffff;
+}
+.zzjz-bg-pink.light {
+	color: #e03997;
+	background-color: #f9d7ea;
+}
+/* title: '棕褐',
+name: 'brown',
+color: '#a5673f' */
+.zzjz-bg-brown {
+	background-color: #a5673f;
+	color: #ffffff;
+}
+.zzjz-bg-brown.light {
+	color: #a5673f;
+	background-color: #ede1d9;
+}
+/* title: '玄灰',
+name: 'grey',
+color: '#8799a3' */
+.zzjz-bg-grey {
+	background-color: #8799a3;
+	color: #ffffff;
+}
+.zzjz-bg-grey.light {
+	color: #8799a3;
+	background-color: #e7ebed;
+}
+/* title: '草灰',
+name: 'gray',
+color: '#aaaaaa' */
+.zzjz-bg-gray {
+	background-color: #f0f0f0;
+	color: #333333;
+}
+/* title: '墨黑',
+name: 'black',
+color: '#333333' */
+.zzjz-bg-black {
+	background-color: #333333;
+	color: #ffffff;
+}
+/* title: '雅白',
+name: 'white',
+color: '#ffffff' */
+.zzjz-bg-white {
+	background-color: #ffffff;
+	color: #666666;
+}
+/* 渐变色背景 */
+.zzjz-bg-gradual-red {
+	background-image: linear-gradient(45deg, #f43f3b, #ec008c);
+	color: #ffffff;
+}
+.zzjz-bg-gradual-orange {
+	background-image: linear-gradient(45deg, #ff9700, #ed1c24);
+	color: #ffffff;
+}
+.zzjz-bg-gradual-green {
+	background-image: linear-gradient(45deg, #39b54a, #8dc63f);
+	color: #ffffff;
+}
+.zzjz-bg-gradual-purple {
+	background-image: linear-gradient(45deg, #9000ff, #5e00ff);
+	color: #ffffff;
+}
+.zzjz-bg-gradual-pink {
+	background-image: linear-gradient(45deg, #ec008c, #6739b6);
+	color: #ffffff;
+}
+.zzjz-bg-gradual-blue {
+	background-image: linear-gradient(45deg, #0081ff, #1cbbb4);
+	color: #ffffff;
+}
